--- a/htmlproject1.html
+++ b/htmlproject1.html
@@ -87,9 +87,18 @@
                     <li>Github link <a href="github.com">Link</a></li>
                 </ul>
             </li>
+            <li>
+                <h3>Secure Messenger App</h3>
+                <p>an android app to securely message</p>
+                <ul>
+                    <li>Hosted Link <a href="example.com">Link</a></li>
+                    <li>Github link <a href="github.com">Link</a></li>
+                </ul>
+            </li>
         </ul>
         </section>
 
+       
 
     </div>
 </body>
