faq section design

--- a/htmlproject1.html
+++ b/htmlproject1.html
@@ -98,6 +98,14 @@
         </ul>
         </section>
 
+        <section>
+            <p>Frequently asked question</p>
+            <details>
+                <summary>What is your name ?</summary>
+                Love Babbar
+            </details>
+        </section>
+
        
 
     </div>
