--- a/htmlproject1.html
+++ b/htmlproject1.html
@@ -104,10 +104,12 @@
                 <summary>What is your name ?</summary>
                 Love Babbar
             </details>
+            <details>
+                <summary>How to get startes ?</summary>
+                Just do it
+            </details>
         </section>
-
        
-
     </div>
 </body>
 </html>
