--- a/csslec16/index.html
+++ b/csslec16/index.html
@@ -14,10 +14,19 @@
             margin: 20px;
         }
 
+        .image1{
+            position: absolute;
+            top: 300px;
+        }
+
         .image2{
-            position: relative;
+            position: relative ;
             top: 200px;
-            left: 30px;
+            left: 30px; 
+        }
+
+        .image3{
+            position: fixed;
         }
 
 
