--- a/csslec16/index.html
+++ b/csslec16/index.html
@@ -26,9 +26,10 @@
         }
 
         .image3{
-            position: fixed;
+            position: sticky;
         }
 
+        /* sticky positioning works for only one div,fixed stays same for the whole website */
 
     </style>
  </head>
