--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -47,11 +47,15 @@
             background-color: aqua;
             flex-shrink: 6;
             /* allows box 1 to shrink 6 times faster */
+            align-self: center;
+            /* aligns the 1st box in cebter of cross axis */
         }
         #box2{
             background-color: blue;
             flex-grow: 77;
             /* allows the box to grow fastter */
+            align-self: flex-end;
+            /* aligns the 2st box in cross axis */
         }
         #box3{
             background-color: brown;
