--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -1,3 +1,19 @@
+<!-- use justify for anything moving in x axis
+use align items for y axis
+use flex direction to reverse items
+ -->
+
+ <!-- flex direction -> row
+      justify content -> row
+      align item -> column-->
+
+
+<!-- flex direction -> column
+      justify content -> column
+      align item -> row -->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
