--- a/mediaqueries21/index.html
+++ b/mediaqueries21/index.html
@@ -10,12 +10,13 @@
             height: 400px;
             width: 400px;
             border: 3px solid black;
-            border-radius: 500px;
+            border-radius: 5px;
         }
-        @media (max-width:500px){
+        @media (min-width:300px) and (max-width:500px){
             .box{
                 background-color: green;
             }
+            /* adds a condition */
         }
     </style>
 </head>
