--- a/recipeproject/index.html
+++ b/recipeproject/index.html
@@ -16,7 +16,7 @@
                         <p id="navlogo">Dhaba</p>
                     </li>
                     <li>
-                        <div>
+                        <div id="navitems">
                             <a href="#">Home</a>
                             <a href="#">Contact</a>
                             <a href="#">About</a>
