--- a/recipeproject/index.html
+++ b/recipeproject/index.html
@@ -8,25 +8,97 @@
 </head>
 <body>
     <div class="container">
-        <div class="navcontainer">
-            <div class="nav">
-                <nav>
-                   <ul id="navlist">
-                    <li>
-                        <p id="navlogo">Dhaba</p>
-                    </li>
-                    <li>
-                        <div id="navitems">
-                            <a href="#">Home</a>
-                            <a href="#">Contact</a>
-                            <a href="#">About</a>
-                        </div>
-                    </li>
-                   </ul>
-                </nav>
+        <header>
+            <div class="navcontainer">
+                <div class="nav">
+                    <nav>
+                       <ul id="navlist">
+                        <li>
+                            <p id="navlogo">Dhaba</p>
+                        </li>
+                        <li>
+                            <div id="navitems">
+                                <a href="#">Home</a>
+                                <a href="#">Contact</a>
+                                <a href="#">About</a>
+                            </div>
+                        </li>
+                       </ul>
+                    </nav>
+                </div>
             </div>
+        </header>
+        
+
+        <div class="contentbox">
+            <!-- item1 -->
+            <section>
+                <div class="item">
+                    <div class="leftbox">
+                        <div>
+                            <h2>Gulab Jamun</h2>
+                        <h2>Ingredients</h2>
+                        <ul>
+                            <li>Sugar</li>
+                            <li>Bread</li>
+                            <li>Oil</li>
+                        </ul>
+                        </div>
+                        <div>
+                            <h2>Recipe</h2>
+                            <ol>
+                                <li>boil</li>
+                                <li>Cook</li>
+                                <li>Serve</li>
+                                <li>Enjoy</li>
+                            </ol>
+                        </div>
+
+                    </div>
+                    <div class="rightbox">
+                        <img src="gj.jpg" alt="Gulab Jamun">
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="item">
+                    <div class="leftbox">
+                        <div>
+                            <h2>Barfi</h2>
+                        <h2>Ingredients</h2>
+                        <ul>
+                            <li>Sugar</li>
+                            <li>Bread</li>
+                            <li>Oil</li>
+                        </ul>
+                        </div>
+                        <div>
+                            <h2>Recipe</h2>
+                            <ol>
+                                <li>boil</li>
+                                <li>Cook</li>
+                                <li>Serve</li>
+                                <li>Enjoy</li>
+                            </ol>
+                        </div>
+
+                    </div>
+                    <div class="rightbox">
+                        <img src="barfi.jpg" alt="Barfi">
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
     
+   <footer>
+        <div class="footerbox">
+            <p>
+                Copyright &copy; Dhaba private Limited 2023 All Rights Reserved
+            </p>
+        </div>
+
+   </footer>
+
 </body>
 </html>
