--- a/recipeproject/index.html
+++ b/recipeproject/index.html
@@ -38,7 +38,7 @@
                         <div>
                             <h2>Gulab Jamun</h2>
                         <h2>Ingredients</h2>
-                        <ul>
+                        <ul class="imgbox">
                             <li>Sugar</li>
                             <li>Bread</li>
                             <li>Oil</li>
@@ -46,7 +46,7 @@
                         </div>
                         <div>
                             <h2>Recipe</h2>
-                            <ol>
+                            <ol class="recipebox">
                                 <li>boil</li>
                                 <li>Cook</li>
                                 <li>Serve</li>
@@ -66,7 +66,7 @@
                         <div>
                             <h2>Barfi</h2>
                         <h2>Ingredients</h2>
-                        <ul>
+                        <ul class="imgbox">
                             <li>Sugar</li>
                             <li>Bread</li>
                             <li>Oil</li>
@@ -74,7 +74,7 @@
                         </div>
                         <div>
                             <h2>Recipe</h2>
-                            <ol>
+                            <ol class="recipebox">
                                 <li>boil</li>
                                 <li>Cook</li>
                                 <li>Serve</li>
